crates/phux-client/src/render/chrome/snapshots/phux_client__render__chrome__sidebar__tests__sectioned_layout_snapshot_quiet.snap
---
source: crates/phux-client/src/render/chrome/sidebar.rs
expression: "strip_text(&p, rect)"
---
 here                    │
 ● phux                  │
   main                  │
 ○ scratch               │
                         │
                         │
 spaces                  │
 ◐ feat-auth          *1 │
 ○ prod-3             ?2 │
                         │
                         │
                         │
                         │
                         │
                         │
                         │
 + new                   │
 = menu                  ‹
