crates/phux-client/src/render/chrome/snapshots/phux_client__render__chrome__sidebar__tests__sectioned_layout_snapshot_short.snap
---
source: crates/phux-client/src/render/chrome/sidebar.rs
expression: "strip_text(&p, rect)"
---
 needs you               │
 ● phux blocked - codex  │
                         │
 here                    │
 ● phux                  │
   main                  │
 ○ scratch               │
                         │
 + new                   │
 = menu                  ‹
